# poke-api-py

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml  fly.yml  pipeline.yaml  pipeline.yml  ruff.yml
migrations/: env.py
migrations/versions/: 0dc973aa5596_remove_dex_number_in_pokemon_table.py  3175602e7a2d_create_teams_table.py  40c0222b8c15_create_pokemon_and_types_table.py  4397ddd624b7_add_created_updated_at_on_trainers_and_.py  4ff068147538_create_pokemon_and_types_seed.py  50abfd1a2c64_create_trainers_table.py  597f78e2bdd6_create_pokemon_seed.py  62d0b944cd96_create_pokemon_table.py  6790cb4674f7_add_dex_number_in_pokemon_table.py  6a04018cef17_create_types_table.py  6caa0112eba4_create_users_table.py  7bbe7e498c06_create_users_table.py  96386ef3c36c_add_created_at_and_updated_at_in_.py  9d8e61690eb2_add_name_field_to_teams_table.py  cbbfafd0932c_create_users_table.py  d0a819e51b92_remove_created_at_and_updated_at_in_.py  d446ebecf03e_create_pokemon_table.py  d6eb46a91264_create_pokemon_teams_table.py  db8f1f18a061_remove_updated_created_at.py  e11982be61fc_create_types_seed.py  fa9402a1a58d_updated_at_in_users_table.py
poke_app/: app.py  auth.py  database.py  factories.py  models.py  schemas.py  settings.py  utils.py
poke_app/routers/: auth.py  pokemon.py  teams.py  types.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_pokemon.py  test_users.py
